Bug 97103 - FILESAVE: Writer loses Track/Display changes preferences when a DOCX/RTF file is saved
Summary: FILESAVE: Writer loses Track/Display changes preferences when a DOCX/RTF file...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.4.2 release
Hardware: All Linux (All)
: medium minor
Assignee: Michael Stahl
URL:
Whiteboard: target:5.3.0 target:5.2.0.1
Keywords: bibisected, bisected, regression
: 94479 94832 95139 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-01-13 15:00 UTC by DouglasCarnall
Modified: 2017-04-25 05:58 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
0b037361 uncluttered of renames (1.95 KB, text/plain)
2016-04-16 10:16 UTC, Björn Michaelsen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description DouglasCarnall 2016-01-13 15:00:22 UTC
This may be related to bug 89732, but I'm filing this report separately because it is not identical.

In LibreOffice Writer (Version: 5.0.4.2
Build ID: 1:5.0.4~rc2-0ubuntu1~wily1) the following irritating behaviour has recently started to happen.

When editing a .docx text document with "Record track changes" selected, but also "Don't show changes" selected under Editing>Track changes, when I save the document these preferences are lost, and all changes are shown. (This is actually happening in the French version, but I translate for convenience).

Each save therefore obliges me to return to this menu and reset my preference for not showing, but recording, all changes to a Writer document. I have been a daily user of LibreOffice for several years now, and keep up-to-date with the latest version using Ubuntu's system. This behaviour is fairly recent (?new to 5.0.x).
Comment 1 raal 2016-01-14 21:29:17 UTC
I can conform with Version: 5.2.0.0.alpha0+
Build ID: 75f0f9d5538577e0d4923b4d46ba6f88b6199814
CPU Threads: 4; OS Version: Linux 4.2; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-01-12_14:23:15

worksin LibreOffice 3.5.0 
Build ID: d6cde02 -> regression
Comment 2 raal 2016-01-15 13:40:25 UTC
This seems to have begun at the below commit.
Adding Cc: to Caolán McNamara; Could you possibly take a look at this one? Thanks
 c0ab22c845e5a89aa789a02214e1ffcf5af57e1e is the first bad commit
commit c0ab22c845e5a89aa789a02214e1ffcf5af57e1e
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Sun May 31 16:19:48 2015 -0500

    source 0b037361b890a83a735186b98d5a3cef124027f4

    source 0b037361b890a83a735186b98d5a3cef124027f4

:040000 040000 d6e3859eefa1ea1af529efb18722bb7aba79162a 67c397a013b183639c044fa7fc771f122c5252e1 M      instdir

author	Caolán McNamara <caolanm@redhat.com>	2015-04-14 14:56:48 (GMT)
committer	Caolán McNamara <caolanm@redhat.com>	2015-04-14 15:22:25 (GMT)
commit 0b037361b890a83a735186b98d5a3cef124027f4 (patch)
Comment 3 Björn Michaelsen 2016-04-16 10:16:22 UTC
Created attachment 124383 [details]
0b037361 uncluttered of renames

attaching the worddiff of the commit named in comment 2 removing renames.
Comment 4 Michael Stahl 2016-06-08 11:34:04 UTC
the problem affects DOCX and RTF export.

fixed on master
Comment 5 Commit Notification 2016-06-08 11:34:59 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a59c4e26abbdd0720d24d3ddc0d6a05a67a31aaf

tdf#97103 sw: fix restoring of SetRedlineMode on DOCX/RTF export

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2016-06-08 18:43:20 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cf60f871a91f2ea373f4e10ab3992ecd98b0535d&h=libreoffice-5-2

tdf#97103 sw: fix restoring of SetRedlineMode on DOCX/RTF export

It will be available in 5.2.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Justin L 2017-04-25 05:58:06 UTC
*** Bug 95139 has been marked as a duplicate of this bug. ***
Comment 8 Justin L 2017-04-25 05:58:20 UTC
*** Bug 94479 has been marked as a duplicate of this bug. ***
Comment 9 Justin L 2017-04-25 05:58:34 UTC
*** Bug 94832 has been marked as a duplicate of this bug. ***