tdf#97103 sw: fix restoring of SetRedlineMode on DOCX/RTF export

In order to prevent ~SwIndexReg asserts, this was changed to restore
the redline mode not in MSWordExportBase::ExportDocument() but in
SwWriter::Write().  Unfortunately only the DOC export actually uses
SwWriter::Write(), so fix the original problem differently by moving the
cursors onto a EndNode.

The m_pCurPam will be deleted anyway, and the m_pOrigPam usually also
will be, and in the case it isn't deleted i hope it's not important :)

(regression from 0b037361b890a83a735186b98d5a3cef124027f4)

Change-Id: Ib3d0cc32862256fdc4363b6035c190cbbcfe5df3
(cherry picked from commit a59c4e26abbdd0720d24d3ddc0d6a05a67a31aaf)